Tests/ContributeWordPressTests/Helpers/Error/URLError.swift
import Foundation

internal enum URLError: String, EquatableError {
  case invalidURLString
}
